# tinylog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/tinylog/: tinylog.hpp
test/: test_tinylog.cpp
